--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: rcsvw
 Title: What the Package Does (one line, title case)
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
+Authors@R: person("Davide", "Ceolin", email = "d.ceolin@vu.nl", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
-Depends: R (>= 3.2.2), rjson, RCurl, rrdf
+Depends: R (>= 3.2.2), rjson, RCurl, rrdf, httr
 License: What license is it under?
 LazyData: true
 Suggests: testthat
