--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: What the Package Does (one line, title case)
 Version: 0.0.0.9000
 Authors@R: person("Davide", "Ceolin", email = "d.ceolin@vu.nl", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
-Depends: R (>= 3.2.2), rjson, RCurl, rrdf, httr
+Depends: R (>= 3.2.2), rjson, RCurl, rrdf, httr, stringi
 License: What license is it under?
 LazyData: true
 Suggests: testthat
